--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
   client:
     build: ./client
     depends_on: [server]
+    environment:
+      DOTNET_API_BASE_URL: http://server:5205/API
     ports: ["3001:3000"]
 
   proxy:
