--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,14 @@ server {
     listen 80;
     server_name _;
 
-    location /api/ {
+    location /API/ {
         proxy_pass http://server:5205;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }    
+    
+    location /api/ {
+        proxy_pass http://client:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
