--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ioredis": "^5.6.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-view-transitions": "^0.3.4",
+    "rate-limiter-flexible": "^7.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
