Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@
 # Build and push both Server and Client images to Azure Container Registry
 
 trigger:
-  - main
+  - azmaster
 
 resources:
   - repo: self
