--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "rate-limiter-flexible": "^7.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.71"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
