--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ variables:
   vmImageName: "ubuntu-latest"
 
   # ACA targets
-  resourceGroup: "rg-devops"
+  resourceGroup: "Devops-rg"
   clientAppName: "devopsclient"
   serverAppName: "devopsserver"
 
