use user-secrets and stop logging user

--- a/Devops/Devops.csproj
+++ b/Devops/Devops.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <UserSecretsId>2b4ee841-9a3e-4399-b941-d8948f6052d4</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
