--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,9 @@ services:
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       ConnectionStrings__DevopsDB: Server=sqlserver;Database=DevopsDB;User Id=sa;Password=Strong!Passw0rd;TrustServerCertificate=True
+      JwtSettings__Secret: 05cLY8Xz14r9O2o4BXuc6dBirU1oOef81fM3sVgRQ7X5lyD8vuklKlj9oOx8eRrNs9VkHfA2Bj7UuCSWQIb3aQ==
+      JwtSettings__Issuer: http://api.devops.local
+      JwtSettings__Audience: http://devops.local
     ports: ["8080:5205"]
     volumes:
       - devops_data_protection_keys:/app/dpkeys
