--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,6 +5,8 @@ RUN npm install --legacy-peer-deps
 
 FROM node:22-alpine AS builder
 WORKDIR /app
+ARG SELF_URL
+ENV SELF_URL=$SELF_URL
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN npm run build
