--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,16 +28,20 @@ services:
       JwtSettings__Secret: 05cLY8Xz14r9O2o4BXuc6dBirU1oOef81fM3sVgRQ7X5lyD8vuklKlj9oOx8eRrNs9VkHfA2Bj7UuCSWQIb3aQ==
       JwtSettings__Issuer: http://api.devops.local
       JwtSettings__Audience: http://devops.local
+      GitHub__ProjectPat: "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"
+      GitHub__ProjectOwnerRepo: "MarkRWolf/Devops"
     ports: ["8080:5205"]
     volumes:
       - devops_data_protection_keys:/app/dpkeys
 
   client:
-    build: ./client
+    build:
+      context: ./client
+      args:
+        SELF_URL: ${SELF_URL}
     depends_on: [server]
     environment:
       DOTNET_API_BASE_URL: http://server:5205/API
-      SELF_URL: http://localhost:3000
     ports: ["3001:3000"]
 
   proxy:
