--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# .github/workflows/main.yml
 name: Build and Deploy to Azure Container Apps
 
 on:
@@ -52,6 +51,19 @@ jobs:
           docker tag ${{ env.ACR_NAME }}/${{ env.CLIENT_IMAGE_REPO }}:${{ env.SHA }} ${{ env.ACR_NAME }}/${{ env.CLIENT_IMAGE_REPO }}:latest
           docker push ${{ env.ACR_NAME }}/${{ env.CLIENT_IMAGE_REPO }}:latest
         working-directory: .
+
+      - name: Write run info
+        run: |
+          echo "Run ID: ${{ github.run_id }}" > run-info.txt
+          echo "Commit SHA: ${{ github.sha }}" >> run-info.txt
+          echo "Short SHA: ${{ env.SHA }}" >> run-info.txt
+
+      - name: Upload run info artifact
+        uses: actions/upload-artifact@v4
+        continue-on-error: true
+        with:
+          name: run-info-${{ github.run_id }}
+          path: run-info.txt
 
       - name: Deploy Server Container App
         uses: azure/container-apps-deploy-action@v1
