--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     depends_on: [server]
     environment:
       DOTNET_API_BASE_URL: http://server:5205/API
+      NEXT_PUBLIC_SELF_URL: ${NEXT_PUBLIC_SELF_URL}
     ports: ["3001:3000"]
 
   proxy:
