--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,7 @@ RUN npm install --legacy-peer-deps
 FROM node:22-alpine AS builder
 WORKDIR /app
 ARG NEXT_PUBLIC_SELF_URL
+ENV NEXT_PUBLIC_SELF_URL=${NEXT_PUBLIC_SELF_URL}
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN npm run build
