--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
@@ -20,8 +21,10 @@
     "next-view-transitions": "^0.3.4",
     "rate-limiter-flexible": "^7.1.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.71"
   },
