--- a/Devops/Devops.Tests/Devops.Tests.csproj
+++ b/Devops/Devops.Tests/Devops.Tests.csproj
@@ -9,16 +9,14 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
-  </ItemGroup>
+ <ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.7" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk"           Version="17.10.0" />
+  <PackageReference Include="xunit"                            Version="2.7.0" />
+  <PackageReference Include="xunit.runner.visualstudio"        Version="2.8.0" />
+  <PackageReference Include="coverlet.collector"               Version="6.0.0" />
+</ItemGroup>
 
-  <ItemGroup>
-    <Using Include="Xunit" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Devops.csproj" />
