--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,11 @@ jobs:
         run: dotnet restore Devops/Devops.sln
 
       - name: Run tests
-        run: dotnet test Devops/Devops.sln --logger "trx;LogFileName=test-results.trx"
+        run: |
+          export JwtSettings__Secret=dummySecret
+          export JwtSettings__Issuer=http://test
+          export JwtSettings__Audience=http://test
+          dotnet test Devops/Devops.sln --logger "trx;LogFileName=test-results.trx"
 
       - name: Upload test results
         if: always()
