--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Build and Deploy to Azure Container Apps
 
 on:
   push:
-    branches:
-      - ghmaster
+    branches: [ghmaster]
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -21,21 +21,23 @@ jobs:
       - name: Restore
         run: dotnet restore Devops/Devops.sln
 
-      - name: Run tests
+      # ─── Run tests INSIDE Docker & extract .trx ──────────────────────
+      - name: Run tests and extract report
+        # build the Dockerfile up to the `report` stage and dump out artifacts/
         run: |
-          export JwtSettings__Secret=dummySecret
-          export JwtSettings__Issuer=http://test
-          export JwtSettings__Audience=http://test
-          export ConnectionStrings__DevopsDB="Server=(localdb)\\MSSQLLocalDB;Database=DevopsTest;Trusted_Connection=True;TrustServerCertificate=True"
-          dotnet test Devops/Devops.sln --logger "trx;LogFileName=test-results.trx"
-
+          docker build \
+            -f Devops/Dockerfile \
+            --target report \
+            -o ./artifacts \
+            .
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-results-${{ github.sha }}
-          path: "**/test-results.trx"
+          path: artifacts/test-results.trx
 
+      # ─── Azure prep & login ─────────────────────────────────────────
       - name: Azure Login
         uses: azure/login@v2
         with:
@@ -43,28 +45,39 @@ jobs:
 
       - name: Log in to Azure Container Registry
         run: |
-          docker login ${{ secrets.ACR_NAME }} -u ${{ secrets.ACR_USERNAME }} -p ${{ secrets.ACR_PASSWORD }}
+          docker login ${{ secrets.ACR_NAME }} \
+            -u ${{ secrets.ACR_USERNAME }} \
+            -p ${{ secrets.ACR_PASSWORD }}
 
       - name: Get current Git short SHA for image tag
         id: git_sha
         run: echo "SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
+      # ─── Build & push server (no tests here, same Dockerfile) ──────
       - name: Build and Push Server Image
         run: |
-          docker build -t ${{ secrets.ACR_NAME }}/${{ secrets.SERVER_IMAGE_REPO }}:${{ env.SHA }} -f Devops/Dockerfile ./Devops
+          docker build \
+            -t ${{ secrets.ACR_NAME }}/${{ secrets.SERVER_IMAGE_REPO }}:${{ env.SHA }} \
+            -f Devops/Dockerfile \
+            .
           docker push ${{ secrets.ACR_NAME }}/${{ secrets.SERVER_IMAGE_REPO }}:${{ env.SHA }}
-          docker tag ${{ secrets.ACR_NAME }}/${{ secrets.SERVER_IMAGE_REPO }}:${{ env.SHA }} ${{ secrets.ACR_NAME }}/${{ secrets.SERVER_IMAGE_REPO }}:latest
+          docker tag ${{ secrets.ACR_NAME }}/${{ secrets.SERVER_IMAGE_REPO }}:${{ env.SHA }} \
+            ${{ secrets.ACR_NAME }}/${{ secrets.SERVER_IMAGE_REPO }}:latest
           docker push ${{ secrets.ACR_NAME }}/${{ secrets.SERVER_IMAGE_REPO }}:latest
-        working-directory: .
 
+      # ─── Build & push client ─────────────────────────────────────────
       - name: Build and Push Client Image
         run: |
-          docker build --build-arg NEXT_PUBLIC_SELF_URL="${{ secrets.NEXT_PUBLIC_SELF_URL }}" -t ${{ secrets.ACR_NAME }}/${{ secrets.CLIENT_IMAGE_REPO }}:${{ env.SHA }} -f client/Dockerfile ./client
+          docker build \
+            --build-arg NEXT_PUBLIC_SELF_URL="${{ secrets.NEXT_PUBLIC_SELF_URL }}" \
+            -t ${{ secrets.ACR_NAME }}/${{ secrets.CLIENT_IMAGE_REPO }}:${{ env.SHA }} \
+            -f client/Dockerfile ./client
           docker push ${{ secrets.ACR_NAME }}/${{ secrets.CLIENT_IMAGE_REPO }}:${{ env.SHA }}
-          docker tag ${{ secrets.ACR_NAME }}/${{ secrets.CLIENT_IMAGE_REPO }}:${{ env.SHA }} ${{ secrets.ACR_NAME }}/${{ secrets.CLIENT_IMAGE_REPO }}:latest
+          docker tag ${{ secrets.ACR_NAME }}/${{ secrets.CLIENT_IMAGE_REPO }}:${{ env.SHA }} \
+            ${{ secrets.ACR_NAME }}/${{ secrets.CLIENT_IMAGE_REPO }}:latest
           docker push ${{ secrets.ACR_NAME }}/${{ secrets.CLIENT_IMAGE_REPO }}:latest
-        working-directory: .
 
+      # ─── Meta & run-info ─────────────────────────────────────────────
       - name: Write run info
         run: |
           echo "Run ID: ${{ github.run_id }}" > run-info.txt
@@ -78,6 +91,7 @@ jobs:
           name: run-info-${{ github.run_id }}
           path: run-info.txt
 
+      # ─── Finally deploy to ACA ───────────────────────────────────────
       - name: Deploy Server Container App
         uses: azure/container-apps-deploy-action@v1
         with:
