--- a/Devops/Devops.csproj
+++ b/Devops/Devops.csproj
@@ -11,26 +11,27 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Extensions.AspNetCore.DataProtection.Blobs" Version="1.3.0" />
-    <PackageReference Include="Azure.Extensions.AspNetCore.DataProtection.Keys"  Version="1.6.1" />
-    <PackageReference Include="Azure.Identity"                                   Version="1.12.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"    Version="8.0.6" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection"              Version="8.0.16" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks"    Version="2.2.0" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.DataProtection.Keys" Version="1.6.1" />
+    <PackageReference Include="Azure.Identity" Version="1.12.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="8.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer"          Version="8.0.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools"              Version="8.0.6">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.IdentityModel.Tokens"                   Version="7.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"        Version="8.0.3" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
   </ItemGroup>
 
   <!-- Keep test sources out of the main build/publish -->
   <ItemGroup>
     <Compile Remove="..\Devops.Tests\**\*.cs" />
-    <None    Remove="..\Devops.Tests\**\*"   />
+    <None Remove="..\Devops.Tests\**\*" />
   </ItemGroup>
 
 </Project>
