--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:svgs": "svgr src/assets --out-dir src/generated/svgs --typescript",
+    "generate:svgs:watch": "svgr --watch src/assets --out-dir src/generated/svgs --typescript"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
@@ -18,6 +20,7 @@
     "ioredis": "^5.6.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.4",
     "rate-limiter-flexible": "^7.1.1",
     "react": "^19.0.0",
@@ -30,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@svgr/cli": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
