--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "generate:svgs:watch": "svgr --watch src/assets --out-dir src/generated/svgs --typescript"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "chart.js": "^4.5.0",
