--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,10 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "concurrently \"npm:dev-proxy\" \"next dev --port 3000\"",
+    "dev-proxy": "node dev-proxy.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
+    "http-proxy": "^1.18.1",
     "ioredis": "^5.6.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
@@ -36,13 +39,15 @@
     "@eslint/eslintrc": "^3",
     "@svgr/cli": "^8.1.0",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/http-proxy": "^1.17.16",
+    "@types/node": "^20.19.9",
+    "@types/react": "19.1.9",
+    "concurrently": "^9.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.0",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
