--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -2,7 +2,6 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
-  # handle WebSocket “Upgrade”
   map $http_upgrade $connection_upgrade {
     default   upgrade;
     ""        close;
@@ -12,46 +11,54 @@ http {
     listen 80;
     server_name _;
 
-    # ← Kestrel REST + healthchecks + negotiate (SignalR negotiate)
-    location ^~ /API/ {
-      proxy_pass         http://$API_INTERNAL_HOST:$API_INTERNAL_PORT;
-      proxy_http_version 1.1;
-      proxy_set_header   Host              $host;
-      proxy_set_header   X-Real-IP         $remote_addr;
-      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto $scheme;
+    location = /WS/workflowHub {
+      return 308 /WS/workflowHub/;
     }
 
-    # ← SignalR WebSocket endpoint
-    location ^~ /WS/workflowHub {
-      proxy_pass         http://$API_INTERNAL_HOST:$API_INTERNAL_PORT;
+    location ^~ /WS/workflowHub/ {
+      proxy_pass         https://$API_INTERNAL_HOST;
       proxy_http_version 1.1;
+      proxy_ssl_server_name on;
       proxy_set_header   Upgrade           $http_upgrade;
       proxy_set_header   Connection        $connection_upgrade;
-      proxy_set_header   Host              $host;
+      proxy_set_header   Host              $API_INTERNAL_HOST;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_redirect     off;
     }
 
-    # ← Next.js API routes (lowercase “/api”)
+    location ^~ /API/ {
+      proxy_pass         https://$API_INTERNAL_HOST;
+      proxy_http_version 1.1;
+      proxy_ssl_server_name on;
+      proxy_set_header   Host              $API_INTERNAL_HOST;
+      proxy_set_header   X-Real-IP         $remote_addr;
+      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_redirect     off;
+    }
+
     location ^~ /api/ {
-      proxy_pass         http://$WEB_INTERNAL_HOST:$WEB_INTERNAL_PORT;
+      proxy_pass         https://$WEB_INTERNAL_HOST;
       proxy_http_version 1.1;
-      proxy_set_header   Host              $host;
+      proxy_ssl_server_name on;
+      proxy_set_header   Host              $WEB_INTERNAL_HOST;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_redirect     off;
     }
 
-    # ← Next.js frontend
     location / {
-      proxy_pass         http://$WEB_INTERNAL_HOST:$WEB_INTERNAL_PORT;
+      proxy_pass         https://$WEB_INTERNAL_HOST;
       proxy_http_version 1.1;
-      proxy_set_header   Host              $host;
+      proxy_ssl_server_name on;
+      proxy_set_header   Host              $WEB_INTERNAL_HOST;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_redirect     off;
     }
   }
 }
