--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,9 +5,14 @@ RUN npm install --legacy-peer-deps
 
 FROM node:22-alpine AS builder
 WORKDIR /app
+
 ARG NEXT_PUBLIC_SELF_URL
+
+ENV NEXT_PUBLIC_SELF_URL=$NEXT_PUBLIC_SELF_URL
+
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+
 RUN npm run build
 
 FROM node:22-alpine AS runner
@@ -15,4 +20,4 @@ WORKDIR /app
 COPY --from=builder /app/ ./
 RUN npm install --production --legacy-peer-deps
 EXPOSE 3000
-CMD ["npm","start"]
+CMD ["npm", "start"]
