--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -16,7 +16,7 @@ http {
     }
 
     location ^~ /WS/workflowHub/ {
-      proxy_pass         https://$API_INTERNAL_HOST;
+      proxy_pass         https://$API_INTERNAL_HOST/;
       proxy_http_version 1.1;
       proxy_ssl_server_name on;
       proxy_set_header   Upgrade           $http_upgrade;
