--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -2,7 +2,6 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
-  # WebSocket “Connection: upgrade” helper
   map $http_upgrade $connection_upgrade {
     default upgrade;
     ""      close;
@@ -12,14 +11,9 @@ http {
     listen 80;
     server_name _;
 
-    # Redirect the non‑slash URL to the slash URL
-    location = /WS/workflowHub {
-      return 308 /WS/workflowHub/;
-    }
-
-    # SignalR hub (must match the exact path Compose used)
-    location ^~ /WS/workflowHub/ {
-      proxy_pass         http://$API_INTERNAL_HOST:80/WS/workflowHub/;
+    # everything /WS/workflowHub → API
+    location /WS/workflowHub {
+      proxy_pass         http://$API_INTERNAL_HOST:80;
       proxy_http_version 1.1;
       proxy_set_header   Upgrade           $http_upgrade;
       proxy_set_header   Connection        $connection_upgrade;
@@ -27,6 +21,8 @@ http {
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_redirect     off;
+      chunked_transfer_encoding on;
     }
 
     # .NET API (uppercase)
@@ -41,7 +37,7 @@ http {
 
     # .NET API (lowercase)
     location ^~ /api/ {
-      proxy_pass         http://$API_INTERNAL_HOST:80/api/;
+      proxy_pass         http://$API_INTERNAL_HOST/api/;
       proxy_http_version 1.1;
       proxy_set_header   Host              $host;
       proxy_set_header   X-Real-IP         $remote_addr;
@@ -51,7 +47,7 @@ http {
 
     # Front‑end UI
     location / {
-      proxy_pass         http://$WEB_INTERNAL_HOST:80;
+      proxy_pass         http://$WEB_INTERNAL_HOST;
       proxy_http_version 1.1;
       proxy_set_header   Host              $host;
       proxy_set_header   X-Real-IP         $remote_addr;
