--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,19 +1,32 @@
+# nginx.conf.template
 worker_processes 1;
 events { worker_connections 1024; }
 
 http {
   map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ""      close;
+    default   upgrade;
+    ""        close;
+  }
+
+  upstream api {
+    server ${API_INTERNAL_HOST}:${API_INTERNAL_PORT};
+  }
+
+  upstream web {
+    server ${WEB_INTERNAL_HOST}:${WEB_INTERNAL_PORT};
   }
 
   server {
     listen 80;
     server_name _;
 
-    # everything /WS/workflowHub → API
-    location /WS/workflowHub {
-      proxy_pass         http://$API_INTERNAL_HOST:80;
+    # signalr negotiate needs trailing slash redirect
+    location = /WS/workflowHub {
+      return 308 /WS/workflowHub/;
+    }
+
+    location ^~ /WS/workflowHub/ {
+      proxy_pass         http://api;
       proxy_http_version 1.1;
       proxy_set_header   Upgrade           $http_upgrade;
       proxy_set_header   Connection        $connection_upgrade;
@@ -21,38 +34,42 @@ http {
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_set_header   X-Forwarded-Host  $host;
       proxy_redirect     off;
-      chunked_transfer_encoding on;
+      proxy_buffering    off;
     }
 
-    # .NET API (uppercase)
     location ^~ /API/ {
-      proxy_pass         http://$API_INTERNAL_HOST:80/API/;
+      proxy_pass         http://api;
       proxy_http_version 1.1;
       proxy_set_header   Host              $host;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_set_header   X-Forwarded-Host  $host;
+      proxy_redirect     off;
     }
 
-    # .NET API (lowercase)
     location ^~ /api/ {
-      proxy_pass         http://$API_INTERNAL_HOST/api/;
+      proxy_pass         http://api/API/;
       proxy_http_version 1.1;
       proxy_set_header   Host              $host;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_set_header   X-Forwarded-Host  $host;
+      proxy_redirect     off;
     }
 
-    # Front‑end UI
     location / {
-      proxy_pass         http://$WEB_INTERNAL_HOST;
+      proxy_pass         http://web;
       proxy_http_version 1.1;
       proxy_set_header   Host              $host;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_set_header   X-Forwarded-Host  $host;
+      proxy_redirect     off;
     }
   }
 }
