--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,4 +1,3 @@
-# nginx.conf.template
 worker_processes 1;
 events { worker_connections 1024; }
 
@@ -8,67 +7,58 @@ http {
     ""        close;
   }
 
-  upstream api {
-    server ${API_INTERNAL_HOST}:${API_INTERNAL_PORT};
-  }
-
-  upstream web {
-    server ${WEB_INTERNAL_HOST}:${WEB_INTERNAL_PORT};
-  }
-
   server {
     listen 80;
     server_name _;
 
-    # signalr negotiate needs trailing slash redirect
     location = /WS/workflowHub {
       return 308 /WS/workflowHub/;
     }
 
     location ^~ /WS/workflowHub/ {
-      proxy_pass         http://api;
+      proxy_pass         http://$API_INTERNAL_HOST:80;
       proxy_http_version 1.1;
+      proxy_ssl_server_name on;
       proxy_set_header   Upgrade           $http_upgrade;
       proxy_set_header   Connection        $connection_upgrade;
-      proxy_set_header   Host              $host;
+      proxy_set_header   Host              $API_INTERNAL_HOST;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
-      proxy_set_header   X-Forwarded-Host  $host;
       proxy_redirect     off;
-      proxy_buffering    off;
     }
 
     location ^~ /API/ {
-      proxy_pass         http://api;
+      proxy_pass         https://$API_INTERNAL_HOST;
       proxy_http_version 1.1;
-      proxy_set_header   Host              $host;
+      proxy_ssl_server_name on;
+      proxy_set_header   Host              $API_INTERNAL_HOST;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
-      proxy_set_header   X-Forwarded-Host  $host;
       proxy_redirect     off;
     }
 
     location ^~ /api/ {
-      proxy_pass         http://api/API/;
+    proxy_pass         https://$API_INTERNAL_HOST/API/;
       proxy_http_version 1.1;
-      proxy_set_header   Host              $host;
+      proxy_ssl_server_name on;
+      proxy_set_header   Host              $API_INTERNAL_HOST;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
-      proxy_set_header   X-Forwarded-Host  $host;
       proxy_redirect     off;
     }
 
+
     location / {
-      proxy_pass         http://web;
+      proxy_pass         https://$WEB_INTERNAL_HOST;
       proxy_http_version 1.1;
-      proxy_set_header   Host              $host;
+      proxy_ssl_server_name on;
+      proxy_set_header   Host              $WEB_INTERNAL_HOST;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
-      proxy_set_header   X-Forwarded-Host  $host;
       proxy_redirect     off;
     }
   }
