--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -18,16 +18,16 @@ http {
     }
 
     location ^~ /WS/workflowHub/ {
-      proxy_pass         http://$API_INTERNAL_HOST:80;
+      proxy_pass            http://$API_INTERNAL_HOST:5205; # Kestrel is HTTP, on port 5205
       proxy_http_version 1.1;
-      proxy_ssl_server_name on;
-      proxy_set_header   Upgrade           $http_upgrade;
-      proxy_set_header   Connection        $connection_upgrade;
-      proxy_set_header   Host              $API_INTERNAL_HOST;
-      proxy_set_header   X-Real-IP         $remote_addr;
-      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto $scheme;
-      proxy_redirect     off;
+      # Removed proxy_ssl_server_name on; as backend is HTTP
+      proxy_set_header    Upgrade            $http_upgrade;
+      proxy_set_header    Connection        $connection_upgrade;
+      proxy_set_header    Host              $host; # Crucial for CORS and SignalR
+      proxy_set_header    X-Real-IP         $remote_addr;
+      proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Proto $scheme;
+      proxy_redirect      off;
     }
 
     location ^~ /API/ {
