--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -28,6 +28,9 @@ http {
       proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header    X-Forwarded-Proto $scheme;
       proxy_redirect      off;
+      proxy_read_timeout      300s;
+      proxy_send_timeout      300s;
+      proxy_connect_timeout   300s;
     }
 
     location ^~ /API/ {
