--- a/Devops/Dockerfile
+++ b/Devops/Dockerfile
@@ -1,3 +1,16 @@
+### ---------- test stage ----------
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS test
+WORKDIR /src
+COPY . .
+
+ENV UseSqliteForTests=true \
+    ConnectionStrings__DevopsDB="Data Source=file:memdb1?mode=memory&cache=shared" \
+    JwtSettings__Secret=dummySecret \
+    JwtSettings__Issuer=http://test \
+    JwtSettings__Audience=http://test
+
+RUN dotnet test Devops/Devops.sln --logger "trx;LogFileName=test-results.trx"
+
 # --- build stage -------------------------------------------------
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
@@ -11,3 +24,6 @@ ENV ASPNETCORE_URLS=http://+:5205
 COPY --from=build /app/out .
 EXPOSE 5205
 ENTRYPOINT ["dotnet","Devops.dll"]
+
+FROM scratch AS report
+COPY --from=test /src/Devops.Tests/TestResults/test-results.trx /test-results.trx
