--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,8 +7,9 @@ FROM node:22-alpine AS builder
 WORKDIR /app
 
 ARG NEXT_PUBLIC_SELF_URL
-
+ARG DOTNET_API_BASE_URL
 ENV NEXT_PUBLIC_SELF_URL=$NEXT_PUBLIC_SELF_URL
+ENV DOTNET_API_BASE_URL=$DOTNET_API_BASE_URL
 
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
